MDEV-6263: Wrong result when using IN subquery with order by - When the optimizer chose LooseScan, make_join_readinfo() should   use the index that was chosen for LooseScan, and should not try   to find a better (shortest) index.